# Manual-Data-Cleaner

./: README.md  app.py  data_cleaning.py  data_visualization.py  demo_data_generator.py  desktop_app.py  logger.py  main.py  pyproject.toml  run.sh  run_desktop.py  run_web.py  utils.py
